duicontrolpanel (0.14.5~unreleased) unstable; urgency=low

  * DUMMY

 -- Viktor Nagy <viktor.nagy@blumsoft.eu>  Tue, 25 Oct 2011 17:05:33 +0200

duicontrolpanel (0.14.4) unstable; urgency=low

  * Fixes: NB#281450 - Launcher view is shown for a while before
    bluetooth settings gets opened

 -- Robert Manner <robert.manner@blumsoft.eu>  Thu, 20 Oct 2011 09:20:17 +0200

duicontrolpanel (0.14.3.1) unstable; urgency=low

  [ Viktor Nagy ]
  * Added performance measuring build option.

  [ Robert Manner ]
  * Fixes: NB#284645 - brightness applet from search has a mainpage icon

  [ Sandor Pinter ]
  * Fixes: NB#286775 - China variant:Tapping on "Installed apps" option
    is not opening Applications screen for PR003 variant.

 -- Sandor Pinter <sandor.pinter@blumsoft.eu>  Wed, 19 Oct 2011 09:59:53 +0200

duicontrolpanel (0.14.2.2) unstable; urgency=low

  * Fixes: NB#283817 - [TASK] support for adding combobox-plugin into a
    settings category page

 -- Robert Manner <robert.manner@blumsoft.eu>  Wed, 28 Sep 2011 11:38:54 +0200

duicontrolpanel (0.14.1) unstable; urgency=low

  [ Viktor Nagy ]
  * Fixes: NB#266453 - [Performance] Response time open settings
    application is above target

 -- Robert Manner <robert.manner@blumsoft.eu>  Mon, 26 Sep 2011 16:33:54 +0200

duicontrolpanel (0.14.0.1) unstable; urgency=low

  * supports applets written in qml
  * Fixes: NB#281433 - [FEA] qml based applets for control panel
  * Fixes: NB#267545 - [TASK] Brigthness slider needs info about power
    save mode (styling improvement)
  * Fixes: NB#282673 - [TASK] Manage applications should appear as
    button instead of drilldown
  * Fixes: NB#282669 - [TASK] Sync & Backup subview should use buttons
    instead of drilldowns

 -- Robert Manner <robert.manner@blumsoft.eu>  Mon, 19 Sep 2011 09:45:18 +0200

duicontrolpanel (0.13.4) unstable; urgency=low

  * Fixes: NB#280032 - Settings: Wrong alignment in settings view
